--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Best Dietitian in Sector 120 Noida | Online Weight Loss |  Online Weight Loss | Diet Plans Noida | Famous Weight Loss Nutritionist in Noida </title>
+    <title>Best Dietitian in Sector 120 Noida | Online Weight Loss |  Online Diet Counsultation | Diet Plans Noida | Famous Weight Loss Nutritionist in Noida </title>
     
     <meta name="description" content="Dt. Karishma Saxena is one of the best Nutritionist in Noida, India. Dietitian Karishma has more than 6 years of experience in the field of diet & nutrition. Online diet consultation, personalised diet charts, online customised diet plans are provided for services like: Weight Loss , Healthy Weight Gain, Cholesterol Management Program, Diabetes Management  (Diabetic Diet), Therapeutic Diets, & other disease management." />
 
