--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -66,6 +66,9 @@
                              </li>                       
                             <li class="<%= selected_menu(controller, 'services')%>">
                                 <%= link_to "Services", services_path %>
+                            </li>
+                            <li class="<%= selected_menu(controller, 'services')%>">
+                                <%= link_to "Blog", blog_path %>
                             </li>           
                             <li class="<%= selected_menu(controller, 'contact')%>">
                                 <%= link_to "CONTACT", contact_path %>
