--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,32 +1,49 @@
-<%= form_for(post) do |f| %>
-  <% if post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+<!-- /.row -->
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <%= method_caption(params)%>
+            </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+            <%= form_for(post) do |f| %>
+              <% if post.errors.any? %>
+                <div id="error_explanation">
+                  <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
-      <ul>
-      <% post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+                  <ul>
+                  <% post.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                  </ul>
+                </div>
+              <% end %>
+
+              <div class="field">
+                <%= f.label :title %>
+                <%= f.text_field :title, class: 'form-control' %>
+              </div>
+
+              <div class="field">
+                <%= f.label :created_by %>
+                <%= f.text_field :created_by, class: 'form-control' %>
+              </div>              
+
+              <div class="field">
+                <%= f.label :description %>
+                <%= f.text_area :description, class: 'form-control' %>
+              </div>
+              <br />
+              <div class="actions">
+                <%= f.submit method_caption(params), class: "btn btn-default"%>
+              </div>
+            <% end %>
+            </div>
+            <!-- /.panel-body -->
+        </div>
+        <!-- /.panel -->
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :created_by %>
-    <%= f.text_field :created_by %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+    <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
