--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,31 +1,44 @@
-<p id="notice"><%= notice %></p>
+<!-- /.row -->
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Manage Blog Posts
+            </div>
+            <!-- /.panel-heading -->
+            
+            <div class="panel-body">
+              <p id="notice"><%= notice %></p>
+                <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                    <thead>
+                        <tr>
+                            <th>S. No.</th>
+                            <th>Post Title</th>
+                            <th>Posted By</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <% @posts.each_with_index do |post, index| %>
+                      <tr>
+                        <td><%= index + 1 %></td>
+                        <td><%= post.title %></td>
+                        <td><%= post.created_by %></td>
+                        <td>
+                          <%= link_to '<button type="button" class="btn btn-primary">Edit</button>'.html_safe, edit_post_path(post) %>
+                          <%= link_to '<button type="button" class="btn btn-primary">Delete</button>'.html_safe, post, method: :delete, data: { confirm: 'Are you sure?' } %>
+                        </td>
+                      </tr>
+                    <% end %>
+                    </tbody>
+                </table>
 
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Created by</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.description %></td>
-        <td><%= post.created_by %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+                <%= link_to '<button type="button" class="btn btn-primary">Add New Blog Post</button>'.html_safe, new_post_path %>
+            </div>
+            <!-- /.panel-body -->
+        </div>
+        <!-- /.panel -->
+    </div>
+    <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
