--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,11 +3,11 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <%= method_caption(params)%>
+                <%= method_caption_posts(params)%>
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-            <%= form_for(post) do |f| %>
+            <%= form_for(post, html: { multipart: true }) do |f| %>
               <% if post.errors.any? %>
                 <div id="error_explanation">
                   <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -20,6 +20,11 @@
                 </div>
               <% end %>
 
+              <div class="field">
+                <%= f.label :image %>
+                <%= f.file_field :image, class: 'form-control' %>
+              </div>              
+              <br />
               <div class="field">
                 <%= f.label :title %>
                 <%= f.text_field :title, class: 'form-control' %>
@@ -36,7 +41,7 @@
               </div>
               <br />
               <div class="actions">
-                <%= f.submit method_caption(params), class: "btn btn-default"%>
+                <%= f.submit method_caption_posts(params), class: "btn btn-default"%>
               </div>
             <% end %>
             </div>
