added html safe with post description

--- a/app/views/home/post.html.erb
+++ b/app/views/home/post.html.erb
@@ -17,7 +17,7 @@
                       </p>
                       <br class="clear" />
                       <br class="clear" />
-                      <p style="float: left !important;"><%= @post.description %></p>
+                      <p style="float: left !important;"><%= @post.description.html_safe %></p>
                       <br class="clear" />
                    
                                    
