Made some changes in payumoney code.

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -17,13 +17,13 @@
             </div>
             <% payment_form_for_payu 'rjQUPktU', 'e5iIg1jwi8',
                   :txnid => 12343334444222,
-                  :amount => '100.00',
+                  :amount => '50.00',
                   :productinfo => 'Book',
                   :firstname => 'abc',
-                  :email => 'abc@example.com',
-                  :phone => '1234567890',
-                  :surl => 'http://localhost:3000/payu_callback',
-                  :furl => 'http://localhost:3000/payu_callback',
+                  :email => 'anuraag.jpr@gmail.com',
+                  :phone => '9910039563',
+                  :surl => 'http://wisenutrition.in/payu_callback',
+                  :furl => 'http://wisenutrition/payu_callback',
                   :service_provider => 'payu_paisa',
                   :html => { :id => 'payment-form' },
                   :class => 'class="btn btn-primary btn-lg btn-block' 
