--- a/app/views/dashboard/enroll_service.html.erb
+++ b/app/views/dashboard/enroll_service.html.erb
@@ -52,7 +52,7 @@
       //alert(pckid);
       $('#enrollButton').click(function() {
         //http://wisenutrition.in/orders/checkout?ser_id='+serid + '&pckid=' + pckid
-        window.location.replace('http://localhost:3000/orders/checkout?ser_id='+serid + '&pckid=' + pckid);
+        window.location.replace('http://wisenutrition.in/orders/checkout?ser_id='+serid + '&pckid=' + pckid);
        }); 
             
     });
