Made some changes in payumoney code.

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -15,7 +15,7 @@
               <div class="col-sm-6 box" style="margin-top:10px; margin-bottom:10px"><strong>Cost</strong></div>
               <div class="col-sm-6 box" style="margin-top:10px; margin-bottom:10px"><%= @package.price%>&nbsp; INR</div>
             </div>
-            <% payment_form_for_payu 'rjQUPktU', 'e5iIg1jwi8',
+            <% payment_form_for_payu 'Ub1gXw', 'hdByqAGO',
                   :txnid => 12343334444222,
                   :amount => '50.00',
                   :productinfo => 'Book',
