--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -25,6 +25,7 @@
 <script type="text/javascript">
   $( document ).ready(function() {
         $(".details").click(function(){
+          //window.location.replace('http://localhost:3000/service_details')
           window.location.replace('http://wisenutrition.in/service_details')
       });
   });
