--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -65,9 +65,9 @@
                                 <%= link_to "Online Consultation", nutritionist_online_path %>
                              </li>                       
                             <li class="<%= selected_menu(controller, 'services')%>">
-                                <%= link_to "Services", services_path %>
+                                <%= link_to "Services", services_offered_path %>
                             </li>
-                            <li class="<%= selected_menu(controller, 'services')%>">
+                            <li class="<%= selected_menu(controller, 'blog')%>">
                                 <%= link_to "Blog", blog_path %>
                             </li>           
                             <li class="<%= selected_menu(controller, 'contact')%>">
