Fixed issue in payu money code.

--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -22,8 +22,8 @@
                   :firstname => current_user.first_name,
                   :email => current_user.email,
                   :phone => current_user.phone_no,
-                  :surl => 'http://localhost:3000/payu_callback',
-                  :furl => 'http://localhost:3000/payu_callback',
+                  :surl => 'http://wisenutrition.in/payu_callback',
+                  :furl => 'http://wisenutrition.in/payu_callback',
                   :service_provider => 'payu_paisa',
                   :html => { :id => 'payment-form' },
                   :class => 'class="btn btn-primary btn-lg btn-block' 
