--- a/app/views/dashboard/enroll_service.html.erb
+++ b/app/views/dashboard/enroll_service.html.erb
@@ -21,7 +21,7 @@
                             </label>
                             <br />
                             <br />
-                            <%= link_to '<button type="button" class="btn btn-primary btn-lg" id="enrollButton">Enroll Now</button>'.html_safe, checkout_orders_path()%>
+                            <%= link_to '<button type="button" class="btn btn-primary btn-lg" id="enrollButton">Enroll Now</button>'.html_safe, '#'%>
                         </div>
                     </div>
                   </div>
