--- a/app/views/layouts/shared/_client_side_menu.html.erb
+++ b/app/views/layouts/shared/_client_side_menu.html.erb
@@ -40,8 +40,15 @@
 
                 <% if current_user.present? && current_user.is_dietitian %>
                   <li>
-                    <%= link_to "<i class='fa fa-dashboard fa-fw'></i> Blog".html_safe, posts_path %>
+                    <%= link_to "<i class='fa fa-users'></i> Users".html_safe, users_path %>
+                  </li>                
+                  <li>
+                    <%= link_to "<i class='fa fa-book'></i> Blog".html_safe, posts_path %>
                   </li>
+                  <li>
+                    <%= link_to "<i class='fa fa-shopping-cart'></i> Orders".html_safe, users_path %>
+                  </li>
+                                     
                 <%end%>                                
                 
             </ul>
