Adding the new design , css, fonts

--- a/app/views/layouts/shared/_slider.html.erb
+++ b/app/views/layouts/shared/_slider.html.erb
@@ -3,7 +3,7 @@
 				<div class="flexslider">
 				          <ul class="slides">
 				            	<li>
-				  	    	    	<%= image_tag('apple.jpg')%>
+				  	    	    	<%= image_tag('slider_1.jpg')%>
                                     <div class="banouter">
                                        <div class="bandescout">
                                         	<div class="container">
@@ -24,7 +24,7 @@
                                       </div>	
 				  	    		</li>
 				  	    		<li>
-				  	    			<%= image_tag('header.jpg')%>
+				  	    			<%= image_tag('slider_2.jpg')%>
                                     <div class="banouter">
                                        <div class="bandescout">
                                         	<div class="container">
