--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -4,7 +4,7 @@
      	   <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3"> 
                   <div class="logo">
-                    <%= link_to image_tag("logo.png"), root_path %>
+                    <%= link_to image_tag("logo-main.png"), root_path %>
                   </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9"> 
