--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1704,10 +1704,10 @@ html[xmlns] .slides {
 }
 
 .mainhdarea p {
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 16px !important;
+    line-height: 28px;
     font-weight: normal;
-    color: #777777;
+    color: black !important;
 }
 
 .mainhdarea p img {
